src/chrome/komodo/skin/global/normalize.less
/* Fonts and colors */
:root
{
    font: message-box;
}

.link,
.text-link
{
    cursor: pointer;
    color: @secondary-special;
    text-decoration: underline;
}

scintilla[anonid="scintilla"] > panel[anonid="autocompletepopup"]
{
    & > hbox > grid
    {
        -moz-user-focus: normal;
    }
}
description, tab, textbox, menulist, menuitem, menu, treecol, button, toolbarbutton,
checkbox, radio, tabpanels, listitem, richlistitem, listheader
{
    color: @foreground; 
}

label, description, button, toolbarbutton, textbox, span
{
    line-height: 1.5rem;
}

label, description, span
{
    &.description
    {
        opacity: 0.6;
    }
}

description, listitem, richlistitem, label[id], treecol label, listheader,
checkbox, radio
{
    padding: 0.2rem 4px;
}

popup, panel, :root
{
    background: @background;
    color: @foreground;
}

caption
{
    label
    {
        color: @caption;
        font-size: 1.2rem;
        line-height: 1.5rem;
        font-weight: bold;
        padding: 5px 0;
    }
}

progressmeter
{
    -moz-appearance: progressbar;
}

ul
{
    list-style: disc;
    padding-left: 2rem;
    margin: 0.5rem 0;
    
    li
    {
        display: list-item;
        padding: 0.2rem 0;
    }
}

groupbox
{
    padding: 5px;
    
    .groupbox-body
    {
        padding-left: 10px;
        margin-bottom: 1.5rem;
    }
}

input.textbox-input
{
    padding: inherit;
    border: inherit;
    background-color: inherit;
    color: inherit;
    font: inherit;
    line-height: inherit;
    
}

notification
{
    background: @contrast !important;
    padding: 4px;
}

menupopup
{
    color: @foreground;
    background: transparent;
    
    menuseparator
    {
        background: @background;
    }
    
    & > .popup-internal-box
    {
        border-radius: 1px;
        border: 1px solid @background;
        background: @contrast;
    }
    
    /* We don't use menu icons, unless otherwise specified */
    menuitem:not(.force-icon) > * > .menu-iconic-icon
    {
        visibility: collapse;
    }
    
    menuitem:not(.force-icon):before
    {
        visibility: collapse;
        display: none;
    }
    
    menuitem, menu
    {
        border-radius: 1px;
    }
    
    menu > .menu-right
    {
        color: @secondary-special;
    }
    
    menu:hover > .menu-right
    {
        color: @foreground;
    }
    
    menu:hover,
    menuitem:hover,
    menu[_moz-menuactive="true"],
    menuitem[_moz-menuactive="true"]
    {
        background: @selected !important;
        color: @selected-foreground !important;
    }
    
    & > menu,
    & > menuitem
    {
        background: @contrast;
    }
}

*, ::-moz-tree-cell-text
{
    font-family: @font;
    font-size: @size;
}

/* Helpers */

[kohidden="true"], [collapsed="true"]
{
    visibility: collapse;
}

.disabled, [disabled="true"]
{
    opacity: 0.5;
}


/* Toolbars */

toolbarbutton {
  -moz-box-align: center;
  -moz-box-pack: center;
}

toolbaritem > toolbarbutton,
.toolbaritem > toolbarbutton
{
    margin: 4px 6px;
}

toolbar
{
    padding: 4px;
}

toolbarbutton.menu-icon > label
{
    visibility: collapse;
}

toolbarbutton[checked="true"]
{
    color: @secondary-special;
}

toolbarbutton:not(.box-inherit):not(.button)
{
    padding: 2px;
    margin: 2px;
}


/* Tabs */

tab
{
    padding: 2px 6px;
    
    label
    {
        padding: 0;
    }
}

:not(.embedded) > tabs
{
    box-shadow: inset 0px -2px 0px 0px @contrast;
    min-height: 32px;
    
    tab
    {
        -moz-box-pack: center;
        -moz-box-align: center;
        min-height: 32px;
    }
    
    tab:not([selected]) 
    {
        border-bottom: 2px solid transparent;
        
        &:hover
        {
            border-bottom: 2px solid fade(@secondary-special, 50%);
        }
    }
    
    tab[selected]
    {
        position: relative;
        z-index: 100;
        border-bottom: 2px solid @secondary-special;
    }
}

tabbox.embedded
{
    tabs
    {
        background: @contrast;
        padding: 0;
        -moz-box-align: stretch;
    }
    
    tab:not([selected])
    {
        opacity: 0.7;
        border-bottom: 2px solid transparent;
        
        &:hover
        {
            border-bottom: 2px solid fade(@secondary-special, 50%);
        }
    }
    
    tab[selected]
    {
        border-bottom: 2px solid @secondary-special;
    }
}

/* Form Elements */

checkbox, radio
{
    -moz-box-pack: center;
    -moz-box-align: center;
}

radio
{
    .radio-label
    {
        margin-left: 4px;
    }
}

checkbox.label-only
{
    &[checked="true"]
    {
        color: @secondary-special;
    }
    
    &:hover
    {
        color: @contrast-special;
        cursor: pointer;
    }
    
    .checkbox-icon
    {
        display: none;
    }
}

textbox, menulist
{
    color: @textbox-foreground;
    background: @textbox;
    padding: 0 4px;
    border-radius: 1px;
    margin: 2px;
    
    min-height: 1.5rem;
    
    .textbox-textarea
    {
        color: @textbox-foreground;
    }
    
    &:not([disabled="true"]):not([readonly])
    {
        &:focus, &:active, &[focused]
        {
            box-shadow: 0px 0px 0px 2px @secondary-special;
        }
    }
    
    button, toolbarbutton, menuitem, dropmarker, tab,
    .textbox-search-icons, .toolbarbutton-text
    {
        &:before
        {
            color: @icons-widget !important;
        }
    }
}

toolbarbutton, button, checkbox, radio
{
    &:focus
    {
        outline: 1px dotted @secondary-special;
    }
}

:root:not(#komodo_main) view
{
    &:focus, &:active, &[focused]
    {
        box-shadow: 0px 0px 0px 2px @secondary-special;
    }
}

menulist > .menulist-label-box 
{
    -moz-box-align: center;
}
/* ... */

